[gd_scene load_steps=5 format=3 uid="uid://mc738fuydi4q"]

[ext_resource type="Script" path="res://ring.gd" id="1_ak78x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_eqohy"]
radius = 12.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0cthq"]
albedo_color = Color(1, 0.670588, 0, 1)
metallic = 1.0
roughness = 0.0

[sub_resource type="TorusMesh" id="TorusMesh_7lvii"]
material = SubResource("StandardMaterial3D_0cthq")
inner_radius = 10.695
outer_radius = 12.604
rings = 38
ring_segments = 27

[node name="ring" type="Node3D"]
transform = Transform3D(1.295, 0, 0, 0, 1.295, 0, 0, 0, 1.295, 0, 0, 0)
script = ExtResource("1_ak78x")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_eqohy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("TorusMesh_7lvii")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
